[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/video/video_tile.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.118, 0.125, 0.141, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="VideoTile" type="PanelContainer"]
custom_minimum_size = Vector2(160, 120)
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VideoRect" type="TextureRect" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="InitialsLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 24)
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="VBox/NameBar"]
layout_mode = 2
size_flags_horizontal = 3
text = ""
text_overrun_behavior = 3

[node name="MuteLabel" type="Label" parent="VBox/NameBar"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.898, 0.306, 0.306, 1)
text = "Muted"
